--- a/statsd.net.shared/statsd.net.shared.csproj
+++ b/statsd.net.shared/statsd.net.shared.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net">
+      <HintPath>..\packages\log4net.2.0.0\lib\net40-full\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Threading.Tasks.Dataflow, Version=4.5.9.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
@@ -52,6 +55,7 @@
     <Compile Include="Listeners\IListener.cs" />
     <Compile Include="Listeners\TcpStatsListener.cs" />
     <Compile Include="Listeners\UdpStatsListener.cs" />
+    <Compile Include="LoggingBootstrap.cs" />
     <Compile Include="Messages\Counter.cs" />
     <Compile Include="Messages\Gauge.cs" />
     <Compile Include="Messages\GraphiteLine.cs" />
