Added option to carry over gauge values between flushes.

--- a/statsd.net/statsdnet.toml
+++ b/statsd.net/statsdnet.toml
@@ -37,6 +37,7 @@ gaugesNamespace = "gauges"
 countersNamespace = "counts"
 setsNamespace = "sets"
 timersNamespace = "timers"
+deleteGaugesOnFlush = false
 
   [calc.percentiles.p90-5min]
   flushIntervalSeconds = 300
