--- a/statsd.net.shared/packages.config
+++ b/statsd.net.shared/packages.config
@@ -1,8 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Griffin.Networking" version="0.5.7" targetFramework="net45" />
-  <package id="Griffin.Networking.Protocol.Http" version="0.5.2" targetFramework="net45" />
-  <package id="Griffin.WebServer" version="0.5.0" targetFramework="net45" />
+  <package id="Kayak" version="0.7.2" targetFramework="net45" />
   <package id="log4net" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Tpl.Dataflow" version="4.5.9" targetFramework="net45" />
 </packages>
