--- a/statsd.net/packages.config
+++ b/statsd.net/packages.config
@@ -1,11 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Griffin.Networking" version="0.5.7" targetFramework="net45" />
-  <package id="Griffin.Networking.Protocol.Http" version="0.5.2" targetFramework="net45" />
-  <package id="Griffin.WebServer" version="0.5.0" targetFramework="net45" />
   <package id="ilmerge" version="2.13.0307" targetFramework="net45" />
   <package id="log4net" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Tpl.Dataflow" version="4.5.9" targetFramework="net45" />
+  <package id="RestSharp" version="104.1" targetFramework="net45" />
   <package id="SlowCheetah" version="2.5.5" targetFramework="net45" />
   <package id="Sprache" version="1.10.0.28" targetFramework="net45" />
   <package id="toml-net" version="0.1.0.16876" targetFramework="net45" />
