--- a/statsd.net/statsd.net.csproj
+++ b/statsd.net/statsd.net.csproj
@@ -34,22 +34,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Griffin.Networking">
-      <HintPath>..\packages\Griffin.Networking.0.5.7\lib\net40\Griffin.Networking.dll</HintPath>
-    </Reference>
-    <Reference Include="Griffin.Networking.Protocol.Http, Version=0.5.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Griffin.Networking.Protocol.Http.0.5.2\lib\net40\Griffin.Networking.Protocol.Http.dll</HintPath>
-    </Reference>
-    <Reference Include="Griffin.WebServer, Version=0.5.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Griffin.WebServer.0.5.0\lib\net40\Griffin.WebServer.dll</HintPath>
-    </Reference>
     <Reference Include="log4net">
       <HintPath>..\packages\log4net.2.0.0\lib\net40-full\log4net.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.TransientFaultHandling.Core">
       <HintPath>..\packages\TransientFaultHandling.Core.5.1.1209.1\lib\NET4\Microsoft.Practices.TransientFaultHandling.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="RestSharp">
+      <HintPath>..\packages\RestSharp.104.1\lib\net4\RestSharp.dll</HintPath>
     </Reference>
     <Reference Include="Sprache, Version=1.10.0.28, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -76,6 +68,13 @@
   <ItemGroup>
     <Compile Include="Backends\ConsoleBackend.cs" />
     <Compile Include="Backends\GraphiteBackend.cs" />
+    <Compile Include="Backends\Librato\LibratoBackend.cs" />
+    <Compile Include="Backends\Librato\LibratoConfig.cs" />
+    <Compile Include="Backends\Librato\LibratoCounter.cs" />
+    <Compile Include="Backends\Librato\LibratoGauge.cs" />
+    <Compile Include="Backends\Librato\LibratoTiming.cs" />
+    <Compile Include="Backends\Librato\LibratoMetricType.cs" />
+    <Compile Include="Backends\Librato\LibratoMetric.cs" />
     <Compile Include="Backends\SqlServer\SqlServerBackend.cs" />
     <Compile Include="Backends\SqlServer\SqlServerErrorDetectionStrategy.cs" />
     <Compile Include="Framework\TimedSetAggregatorBlockFactory.cs" />
@@ -89,7 +88,6 @@
     </Compile>
     <Compile Include="Statsd.cs" />
     <Compile Include="Framework\TimedGaugeAggregatorBlockFactory.cs" />
-    <Compile Include="Framework\Percentile.cs" />
     <Compile Include="Framework\ProjectInstaller.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -158,9 +156,7 @@
       <MergeAsm Include="$(OutputPath)statsd.net.shared.dll" />
       <MergeAsm Include="$(OutputPath)System.Threading.Tasks.Dataflow.dll" />
       <MergeAsm Include="$(OutputPath)toml-net.dll" />
-	  <MergeAsm Include="$(OutputPath)Griffin.Networking.dll" />
-	  <MergeAsm Include="$(OutputPath)Griffin.WebServer.dll" />
-	  <MergeAsm Include="$(OutputPath)Griffin.Networking.Protocol.Http.dll" />
+      <MergeAsm Include="$(OutputPath)Kayak.dll" />
     </ItemGroup>
     <PropertyGroup>
       <MergedAssembly>$(ProjectDir)$(OutDir)statsdnet.exe</MergedAssembly>
