--- a/statsd.net/packages.config
+++ b/statsd.net/packages.config
@@ -2,10 +2,9 @@
 <packages>
   <package id="ilmerge" version="2.13.0307" targetFramework="net45" />
   <package id="log4net" version="2.0.0" targetFramework="net45" />
-  <package id="Microsoft.Tpl.Dataflow" version="4.5.9" targetFramework="net45" />
+  <package id="Microsoft.Tpl.Dataflow" version="4.5.11" targetFramework="net45" />
   <package id="RestSharp" version="104.1" targetFramework="net45" />
-  <package id="SlowCheetah" version="2.5.5" targetFramework="net45" />
-  <package id="Sprache" version="1.10.0.28" targetFramework="net45" />
-  <package id="toml-net" version="0.1.0.16876" targetFramework="net45" />
+  <package id="SlowCheetah" version="2.5.8" targetFramework="net45" />
+  <package id="StatsdCsharpClient" version="1.2.0.0" targetFramework="net45" />
   <package id="TransientFaultHandling.Core" version="5.1.1209.1" targetFramework="net45" />
 </packages>
