--- a/statsd.net/statsdnet.config
+++ b/statsd.net/statsdnet.config
@@ -5,7 +5,7 @@
         <tcp port="12001" />
         <http port="12002" cookie="950592C2-C2E3-46DA-B6AE-C8CE8A7847F5" />
     </listeners>
-    <aggregation flushInterval="10s">
+    <aggregation flushInterval="1m">
         <gauges namespace="test.gauges" removeZeroGauges="true" />
         <counters namespace="test.counters" />
         <sets namespace="test.sets" />
