--- a/statsd.net/statsdnet.config
+++ b/statsd.net/statsdnet.config
@@ -14,7 +14,7 @@
         </timers>
     </aggregation>
     <backends>
-        <graphite host="metricsas1" port="2003" />
+        <graphite host="localhost" port="2003" />
         <console />
     </backends>
 </statsdnet>
