--- a/statsd.net/statsdnet.config
+++ b/statsd.net/statsdnet.config
@@ -1,13 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<statsdnet name="statsd">
+<statsdnet name="statsdnet-b">
     <listeners>
-        <udp port="8000" />
+        <udp port="12000" />
+        <statsdnet port="12001" />
     </listeners>
-    <aggregation flushInterval="1m">
-        <gauges namespace="test.gauges" removeZeroGauges="true" />
-        <counters namespace="test.counters" />
-        <sets namespace="test.sets" />
-        <timers namespace="test.timers" calculateSumSquares="false">
+    <aggregation flushInterval="5s">
+        <gauges namespace="gauges" removeZeroGauges="true" />
+        <counters namespace="counters" />
+        <sets namespace="sets" />
+        <timers namespace="timers" calculateSumSquares="false">
             <percentile name="p90-5min" threshold="90" flushInterval="5m" />
             <percentile name="p90-1hour" threshold="90" flushInterval="1h" />
             <percentile name="p50-1hour" threshold="50" flushInterval="1h" />
@@ -15,6 +16,7 @@
     </aggregation>
     <backends>
         <graphite host="localhost" port="2003" />
+        <statsdnet host="localhost" port="12001" flushInterval="5s"/>
         <console />
     </backends>
 </statsdnet>
