extra error handling on statsdnet listener. Added webapi host.

--- a/statsd.net.shared/packages.config
+++ b/statsd.net.shared/packages.config
@@ -2,5 +2,9 @@
 <packages>
   <package id="Kayak" version="0.7.2" targetFramework="net45" />
   <package id="log4net" version="2.0.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.SelfHost" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.Tpl.Dataflow" version="4.5.11" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
 </packages>
