--- a/statsd.net/statsdnet.config
+++ b/statsd.net/statsdnet.config
@@ -15,7 +15,7 @@
         </timers>
     </aggregation>
     <backends>
-        <graphite host="localhost" port="2003" />
+        <graphite host="ec2-50-19-64-42.compute-1.amazonaws.com" port="2003" />
         <statsdnet host="localhost" port="12001" flushInterval="5s"/>
         <console />
     </backends>
