--- a/statsd.net/statsdnet.config
+++ b/statsd.net/statsdnet.config
@@ -1,14 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <statsdnet name="statsdnet-b">
     <listeners>
-        <udp port="12000" />
         <statsdnet port="12001" />
     </listeners>
     <aggregation flushInterval="5s">
-        <gauges namespace="gauges" removeZeroGauges="true" />
-        <counters namespace="counters" />
-        <sets namespace="sets" />
-        <timers namespace="timers" calculateSumSquares="false">
+        <gauges namespace="statsdnet-b.gauges" removeZeroGauges="true" />
+        <counters namespace="statsdnet-b.counters" />
+        <sets namespace="statsdnet-b.sets" />
+        <timers namespace="statsdnet-b.timers" calculateSumSquares="false">
             <percentile name="p90-5min" threshold="90" flushInterval="5m" />
             <percentile name="p90-1hour" threshold="90" flushInterval="1h" />
             <percentile name="p50-1hour" threshold="50" flushInterval="1h" />
@@ -16,7 +15,6 @@
     </aggregation>
     <backends>
         <graphite host="ec2-50-19-64-42.compute-1.amazonaws.com" port="2003" />
-        <statsdnet host="localhost" port="12001" flushInterval="5s"/>
         <console />
     </backends>
 </statsdnet>
