--- a/statsd.net/Properties/SlowCheetah/SlowCheetah.Transforms.targets
+++ b/statsd.net/Properties/SlowCheetah/SlowCheetah.Transforms.targets
@@ -21,12 +21,15 @@ Copyright (C) Sayed Ibrahim Hashimi, Chuck England 2011-2013. All rights reserve
   <Target Name="CopyAssembliesToLocalPath" Condition=" '$(sc-MSBuildLibPathLocal)'!='' and !Exists('$(sc-MSBuildLibPathLocal)')">
     <ItemGroup>
       <_FilesToCopy Remove="@(_FilesToCopy)"/>
-      <_FilesToCopy Include="$(SlowCheetahToolsPath)**\*"/>
+      <_FilesToCopy Include="$(SlowCheetahToolsPath)Microsoft.Web.XmlTransform.dll"/>
+      <_FilesToCopy Include="$(SlowCheetahToolsPath)SlowCheetah.NuGet.template.proj"/>
+      <_FilesToCopy Include="$(SlowCheetahToolsPath)SlowCheetah.Transforms.targets"/>
+      <_FilesToCopy Include="$(SlowCheetahToolsPath)SlowCheetah.Xdt.dll"/>
     </ItemGroup>
 
     <MakeDir Directories="$(sc-MSBuildLibPathLocal)"/>
     <Message Text="Copying SlowCheetah build files to [$(sc-MSBuildLibPathLocal)] if needed" />
-    <Message Text="************ @(_FilesToCopy): [@(_FilesToCopy)]" Importance="high"/>
+    <Message Text="************ %40(_FilesToCopy): [@(_FilesToCopy)]" Importance="high"/>
     <Copy SourceFiles="@(_FilesToCopy)"
           DestinationFiles="@(_FilesToCopy->'$(sc-MSBuildLibPathLocal)%(RecursiveDir)%(Filename)%(Extension)')"
           SkipUnchangedFiles="true"/>
