Fixed a bug in the gauges aggregator.

--- a/statsd.net/log4net.config
+++ b/statsd.net/log4net.config
@@ -21,6 +21,7 @@
   </appender>
   
   <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
+    <threshold value="WARN" />
     <file value="stats-net.log"/>
     <staticLogFileName value="true" />
     <appendToFile value="true" />
