--- a/ExampleExternalBackend/ExampleExternalBackend.csproj
+++ b/ExampleExternalBackend/ExampleExternalBackend.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BE150548-D5EB-4289-8706-3EA475175592}</ProjectGuid>
+    <ProjectGuid>{9075F1AA-EAEA-44B1-8801-7F1A2FA6722D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>statsd.net.shared</RootNamespace>
-    <AssemblyName>statsd.net.shared</AssemblyName>
+    <RootNamespace>ExampleExternalBackend</RootNamespace>
+    <AssemblyName>ExampleExternalBackend</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -32,21 +32,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Kayak">
-      <HintPath>..\packages\Kayak.0.7.2\lib\Kayak.dll</HintPath>
-    </Reference>
-    <Reference Include="log4net, Version=1.2.13.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Threading.Tasks.Dataflow, Version=4.5.14.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Microsoft.Tpl.Dataflow.4.5.14\lib\portable-net45+win8\System.Threading.Tasks.Dataflow.dll</HintPath>
     </Reference>
-    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -54,49 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BetterExpando.cs" />
-    <Compile Include="Blocks\TimedBufferBlock.cs" />
-    <Compile Include="Encryption\SimplerAES.cs" />
-    <Compile Include="ExtensionMethods.cs" />
-    <Compile Include="Factories\MessageParserBlockFactory.cs" />
-    <Compile Include="Structures\DecoderBlockPacket.cs" />
-    <Compile Include="Listeners\HttpStatsListener.cs" />
-    <Compile Include="Listeners\IListener.cs" />
-    <Compile Include="Listeners\IMessageProcessor.cs" />
-    <Compile Include="Listeners\StatsdnetTcpListener.cs" />
-    <Compile Include="Listeners\TcpStatsListener.cs" />
-    <Compile Include="Listeners\UdpStatsListener.cs" />
-    <Compile Include="LoggingBootstrap.cs" />
-    <Compile Include="Messages\Counter.cs" />
-    <Compile Include="Messages\Gauge.cs" />
-    <Compile Include="Messages\InvalidMessage.cs" />
-    <Compile Include="Messages\MessageType.cs" />
-    <Compile Include="Messages\Raw.cs" />
-    <Compile Include="Messages\Set.cs" />
-    <Compile Include="Messages\StatsdMessage.cs" />
-    <Compile Include="Messages\StatsdMessageFactory.cs" />
-    <Compile Include="Messages\Timing.cs" />
+    <Compile Include="FileBackend.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\IntervalService.cs" />
-    <Compile Include="Services\PercentileCalculator.cs" />
-    <Compile Include="Services\SystemInfoService.cs" />
-    <Compile Include="Services\SystemMetricsService.cs" />
-    <Compile Include="Structures\CounterBucket.cs" />
-    <Compile Include="Structures\DatapointBox.cs" />
-    <Compile Include="Structures\GaugesBucket.cs" />
-    <Compile Include="Structures\LatencyBucket.cs" />
-    <Compile Include="Structures\LatencyDatapointBox.cs" />
-    <Compile Include="Structures\PercentileBucket.cs" />
-    <Compile Include="Structures\RawBucket.cs" />
-    <Compile Include="Structures\SetsBucket.cs" />
-    <Compile Include="SuperCheapIOC.cs" />
-    <Compile Include="Utility.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Backends\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\statsd.net.core\statsd.net.core.csproj">
@@ -105,7 +59,11 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+  <PropertyGroup>
+    <PostBuildEvent>
+    </PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
