--- a/statsd.net-Tests/statsd.net-Tests.csproj
+++ b/statsd.net-Tests/statsd.net-Tests.csproj
@@ -93,6 +93,10 @@
     <Compile Include="TimedSetAggregatorBlockTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\statsd.net.core\statsd.net.core.csproj">
+      <Project>{9d5c34b4-3623-4234-bc82-f9da37204971}</Project>
+      <Name>statsd.net.core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\statsd.net.shared\statsd.net.shared.csproj">
       <Project>{be150548-d5eb-4289-8706-3ea475175592}</Project>
       <Name>statsd.net.shared</Name>
