--- a/statsd.net/log4net.config
+++ b/statsd.net/log4net.config
@@ -4,9 +4,15 @@
     <level value="ALL" />
     <appender-ref ref="OutputDebugStringAppender" />
     <appender-ref ref="DebugTraceAppender" />
-    <appender-ref ref="RollingFileAppender" />
-    <appender-ref ref="EventLogAppender" />
+    <appender-ref ref="ConsoleAppender" />
   </root>
+
+  <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
+    <threshold value="INFO" />
+    <layout type="log4net.Layout.PatternLayout">
+      <conversionPattern value="[statsd.net] %-5level - %message%newline"/>
+    </layout>
+  </appender>
 
   <appender name="OutputDebugStringAppender" type="log4net.Appender.OutputDebugStringAppender">
     <layout type="log4net.Layout.PatternLayout">
