Made UDP default protocol for graphite backend.

--- a/statsd.net/statsdnet.config
+++ b/statsd.net/statsdnet.config
@@ -15,6 +15,7 @@
     </aggregation>
     <backends>
         <statsdnet host="localhost" port="12001" flushInterval="5s" enableCompression="true"/>
+      <graphite host="aarlcubu01" port="2003" />
         <console />
     </backends>
 </statsdnet>
